# PyJsBitwise

./: CHANGELOG.md  README.md  __init__.py  pyproject.toml  setup.py
.github/workflows/: build-wheel.yml  release.yml
src/pyjsbitwise/: __init__.py
src/pyjsshift/: __init__.py
