[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "PyJsShift"
version = "1.0.1"
authors = [
	{name = "Pairman", email = "pairmanxlr@gmail.com"}
]
readme = "README.md"
description = "Bitwise shift with the same behavior in JavaScript."
license = {text = "GNU General Public License v3 (GPLv3)"}
keywords = ["javascript", "js", "bitwise", "shift"]
classifiers = [
	"Programming Language :: Python :: 3"
]
requires-python = ">=3.6"

[project.urls]
Homepage = "https://github.com/Pairman/PyJsShift"
Changelog = "https://github.com/Pairman/PyJsShift/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["src"]
include = ["pyjsshift*"]
